@@ -1,12 +1,12 @@
-package dev.mvc.feedback;
-
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
+
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -15,10 +15,14 @@ public class ViteManifest {
   private final Map<String, Map<String, Object>> manifest;
 
   public ViteManifest() throws IOException {
-    String path = "src/main/resources/static/feedback/assets/manifest.json";
-    byte[] bytes = Files.readAllBytes(Paths.get(path));
-    ObjectMapper mapper = new ObjectMapper();
-    this.manifest = mapper.readValue(bytes, new TypeReference<>() {});
+    // ✅ classpath 경로를 통해 WAR 내부에서도 접근 가능
+    ClassPathResource resource = new ClassPathResource("static/feedback/assets/manifest.json");
+
+    try (InputStream is = resource.getInputStream()) {
+      byte[] bytes = is.readAllBytes();
+      ObjectMapper mapper = new ObjectMapper();
+      this.manifest = mapper.readValue(bytes, new TypeReference<>() {});
+    }
   }
 
   public String js(String entry) {
@@ -29,14 +33,14 @@ public class ViteManifest {
   public String css(String entry) {
     Object cssObj = manifest.get(entry).get("css");
     if (cssObj instanceof List<?> cssList && !cssList.isEmpty()) {
-      return "/feedback/" + cssList.get(0).toString(); // 첫 번째 CSS만
+      return "/feedback/" + cssList.get(0).toString();
     }
     return null;
   }
-  
-//내부 클래스
+
+  // 내부 클래스 (사용하지 않는다면 삭제 가능)
   public static class Entry {
-      public String file;
-      public List<String> css;  // ✅ 배열로 선언
+    public String file;
+    public List<String> css;
   }
 }
